Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4001

Cassandra: server crashes in ha_cassandra::end_bulk_insert on INSERT .. SELECT with a non-existing column

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.1
    • 10.0.3
    • None

    Description

      #4  <signal handler called>
      #5  0x0857945a in ha_cassandra::end_bulk_insert (this=0xbcfab30) at 10.0-base-cassandra/storage/cassandra/ha_cassandra.cc:2055
      #6  0x08239eca in handler::ha_end_bulk_insert (this=0xbcfab30) at 10.0-base-cassandra/sql/handler.h:1966
      #7  0x0823834e in select_insert::abort_result_set (this=0xbcf85b8) at 10.0-base-cassandra/sql/sql_insert.cc:3697
      #8  0x08278f13 in handle_select (thd=0xbce9480, lex=0xbceab5c, result=0xbcf85b8, setup_tables_done_option=1073741824) at 10.0-base-cassandra/sql/sql_select.cc:374
      #9  0x0824edb7 in mysql_execute_command (thd=0xbce9480) at 10.0-base-cassandra/sql/sql_parse.cc:3138
      #10 0x082563b2 in mysql_parse (thd=0xbce9480, rawbuf=0xbcf7b08 "insert into t1 (a) select b from t1", length=35, parser_state=0x98579d84) at 10.0-base-cassandra/sql/sql_parse.cc:5874
      #11 0x0824a285 in dispatch_command (command=COM_QUERY, thd=0xbce9480, packet=0xbcec759 "insert into t1 (a) select b from t1", packet_length=35) at 10.0-base-cassandra/sql/sql_parse.cc:1072
      #12 0x08249751 in do_command (thd=0xbce9480) at 10.0-base-cassandra/sql/sql_parse.cc:811
      #13 0x083414da in do_handle_one_connection (thd_arg=0xbce9480) at 10.0-base-cassandra/sql/sql_connect.cc:1253
      #14 0x08341025 in handle_one_connection (arg=0xbce9480) at 10.0-base-cassandra/sql/sql_connect.cc:1168
      #15 0xb777ee32 in start_thread () from /lib/libpthread.so.0

      cqlsh:manual_test> create columnfamily cf1 ( rowkey int primary key, a int );

      create table t1 (rowkey int primary key, a int) 
      ENGINE=CASSANDRA 
      thrift_host='127.0.0.1' keyspace='manual_test' column_family='cf1';
       
      insert into t1 (a) select b from t1;

      The table (or, rather, the column family) does not have to be empty: if something was inserted through another table, or through the same table but server was restarted after that, the provided INSERT .. SELECT still causes a crash. However, if I run a valid INSERT first, and then try the one above without restarting server, it works all right (throws the expected ERROR 1054 (42S22): Unknown column 'b' in 'field list').

      bzr version-info
      revision-id: psergey@askmonty.org-20121224043622-xn8g8y3vhtu1lb3w
      revno: 3459
      branch: 10.0-base-cassandra

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.