MDEV-4001: Cassandra: server crashes in ha_cassandra::end_bulk_insert on INSERT .. SELECT with a non-existing column - INSERT ... SELECT may call handler->end_bulk_insert() without having   called handler->start_bulk_insert(). Let Cassandra SE handle this.